# nlsql-mcp-server-npm

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  SETUP.md  index.js  npm_1.3_zero_key_spec.md  package-lock.json  package.json  v0_critique.md  v0_platform.md  v0_proposal.md  v0_trust.md  v1_plan.md
analytics_bird/: .gitignore  README.md  pyproject.toml  run_bench.py  run_five.py  run_gold_sanity.py  smoke_test.py
analytics_bird/adapters/: claude.py
analytics_bird/bird/: dataset.py  download.py  mini.json  mini.py  score.py
analytics_bird/bird/tests/: test_score.py
analytics_bird/prompts/: system.md
analytics_bird/tools/: server.py  smoke_server.py  sql.py
analytics_bird/tracing/: jsonl.py
python-src/: __init__.py  requirements-runtime.txt  requirements.txt
python-src/nlsql_mcp_server/: nlsql_client.py  server.py  tools.py
scripts/: install-deps.js
test/: test.js
